# at_2048

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  prod-docker-compose.yml  roadmap.md  rust-toolchain.toml
api_2048/: Cargo.toml  Dev.toml
api_2048/src/: image_routes.rs  main.rs  share_routes.rs
app_2048/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  bacon.toml  index.html  manifest.json  package-lock.json  package.json  service_worker.js  tailwind.config.js
app_2048/src/: agent.rs  atrium_stores.rs  idb.rs  lib.rs  oauth_client.rs  resolver.rs  store.rs  tailwind.css
app_2048/src/at_repo_sync/: mod.rs
app_2048/src/components/: mod.rs  theme_picker.rs
app_2048/src/pages/: callback.rs  game.rs  login.rs  mod.rs  seed.rs  stats.rs
dockerfiles/: Api.Dockerfile  Caddy.Dockerfile
production_configs/: Caddyfile  client_metadata.json
types_2048/: Cargo.toml  lexicon_docs_draft.yml
types_2048/lexicons/blue/2048/: defs.json  game.json
types_2048/lexicons/blue/2048/key/: defs.json  game.json  stats.json
types_2048/lexicons/blue/2048/player/: profile.json  stats.json
types_2048/lexicons/blue/2048/verification/: defs.json  game.json  stats.json
types_2048/lexicons/com/atproto/repo/: strongRef.json
types_2048/src/: blue.rs  lib.rs  record.rs
types_2048/src/blue/: _2048.rs
types_2048/src/blue/_2048/: defs.rs  game.rs  key.rs  player.rs  verification.rs
types_2048/src/blue/_2048/key/: defs.rs  game.rs  player.rs
types_2048/src/blue/_2048/key/player/: stats.rs
types_2048/src/blue/_2048/player/: profile.rs  stats.rs
types_2048/src/blue/_2048/verification/: defs.rs  game.rs  stats.rs
types_2048/src/com/: atproto.rs
types_2048/src/com/atproto/: repo.rs
