[package]
name = "api_2048"
version = "0.1.0"
edition = "2024"

[dependencies]
#atrium-crypto = "0.1.2"
#rand = "0.8.5"
dropshot = "0.16.0"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
schemars = { version = "0.8.22", features = ["uuid1"] }
toml = "0.8.22"
image = "0.25.1"
imageproc = "0.25.0"
rusttype = "0.9.3"
# twothousand_forty_eight = { path = "../twothousand_forty_eight" }
twothousand-forty-eight = "0.22.1"
urlencoding = "2.1.3"
log = "0.4"
ab_glyph = "0.2"
hyper = { version = "1", features = ["full"] }
