[package]
name = "app_2048"
version = "0.1.0"
edition = "2024"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
atrium-api.workspace = true
atrium-common.workspace = true
atrium-identity.workspace = true
atrium-oauth.workspace = true
twothousand-forty-eight = { version = "0.22.1", features = ["wasm", "wasm-bindgen"] }
yew-agent = "0.3.0"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.77", features = ["default", "HtmlElement", "HtmlSelectElement", "HtmlHtmlElement", "TouchList", "TouchEvent", "Touch", "MediaQueryList"] }
rand = "0.8.5"
log = "0.4.27"
wasm-logger = "0.2.0"
gloo = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
numfmt = "1.1.1"
gloo-utils = "0.2.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
postcard = { version = "1.1.1", features = ["alloc"] }
types-2048 = { path = "../types_2048" }
console_error_panic_hook = "0.1.7"
serde_json = "1.0.140"
serde_html_form = "0.2.7"
indexed_db_futures = { version = "0.6.1", features = ["serde", "cursors", "version-change", "async-upgrade", "tx-done", "indices"] }
yew-hooks = "0.3.3"
yewdux = "0.11.0"
xxhash-rust = { version = "0.8.15", features = ["const_xxh3"] }
#hickory-resolver = { version = "0.24.1", features = ["dns-over-https", "dns-over-https-rustls", ""] }

